--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "upgame",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "license": "MIT",
   "homepage": "http://gustavoliveira94.github.io/upgame",
   "dependencies": {
